Made header a bit larger to avoid link overlap

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,5 +10,5 @@
 .page-header .app-name {
   margin: 0;
   padding: 0;
-  height: 130px;
+  height: 150px;
 }
